# primekg-neo4j

./: .env.example  .gitignore  CLAUDE.md  README.md
chatbot/: README.md  pyproject.toml
chatbot/src/primekg_chatbot/: agent.py  cli.py  config.py  prompts.py
neo4j/: README.md  load_primekg_into_neo4j.py  requirements.txt
